Add CSS To "Quote" "Action" "Header"; Add README

--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-* {
-box-sizing: border-box;
-font-family: 'Roboto'
-}
+    * {
+    box-sizing: border-box;
+    font-family: 'Roboto'
+    }
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
-ul {
+    ul {
     list-style: none;
     padding: 0px;
-}
+    }
 
-a {
+    a {
     text-decoration: none;
     color: rgb(249, 250, 248);
-}
+    }
 
-body {
+    body {
     display: flex;
     flex-flow: column nowrap;
     margin: auto;
     color: rgb(249, 250, 248);
-}
+        }
 
     .header {
     display: flex;
@@ -30,20 +30,20 @@ body {
     background-color: rgb(31, 41, 55);
     }
 
-.left-header {
-align-items: center;
-display: flex;
-flex-flow: column nowrap;
-}
-
-.logo {
-    width: 40px;
- }
-
- .right-header ul {
+    .left-header {
+    align-items: center;
     display: flex;
-     gap: 30px;
- }
+    flex-flow: column nowrap;
+    }
+
+    .logo {
+    width: 40px;
+    }
+
+    .right-header ul {
+    display: flex;
+    gap: 30px;
+    }
 
 
 
@@ -56,21 +56,21 @@ flex-flow: column nowrap;
 
 
     .pitch {
-        background-color: rgb(31, 41, 55);
-        display: flex;
-        justify-content: space-around;
-        padding: 20px;
-    
+    background-color: rgb(31, 41, 55);
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;   
     }
 
     .earth {
         align-self: center;
     }
-.earth img {
+
+    .earth img {
     width: 400px;
     height: 400px;
 
-}
+    }
     
     .left-pitch {
         display: flex;
@@ -80,7 +80,7 @@ flex-flow: column nowrap;
         max-width: 700px;
     }
     
-    .title {
+    .left-pitch .title {
         font-weight: 900;
         font-size: 48px;
     }
@@ -156,14 +156,70 @@ flex-flow: column nowrap;
         margin: 10px auto;
     }
 
+
+
+
+
     .quote {
         background-color: #e5e7eb;
+        display: flex;
+        flex-flow: column nowrap;
+        padding: 100px;
+        text-align: center;
+        color: #1f2937;
     }
 
-    .action {
+.quote .text {
+font-size: 36px;
+font-weight: 300;
+font-style: italic;
+}
 
+.quote .source{
+    font-weight: bold;
+    font-size: 24px;
+    align-self: flex-end;
+}
+
+    .action  {
+margin: 100px;
+
+    }
+    .action .container {
+        display: flex;
+        background-color: rgb(56, 130, 246);
+        border-radius: 10px;
+        padding: 20px;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .container-left {
+        gap: 10px;
+        display: flex;
+        flex-flow: column nowrap;
+        max-width: ;
+    }
+
+    .container-left h2 {
+        margin: 0;
+    }
+
+    .button {
+        text-align: center;
+        padding: 5px 20px;
+        border: 2px solid rgb(255, 255, 255);
+        border-radius: 5px;
+        background-color: rgb(56, 130, 246);
+        width: 120px;
     }
 
     .footer {
+        background-color: #1f2937;
+        
+    }
 
+    .copyright {
+        text-align: center;
+        margin: 20px auto;
     }
